Added an in-game timeout limit, closes #9

--- a/assign2/src/server/application.properties
+++ b/assign2/src/server/application.properties
@@ -1,4 +1,11 @@
 port=8080
 teamSize=1
+
+# The rate of change for the elo rating
 eloFactor=32
+
+# Queue refresh rate in seconds
 queueRefresh=5
+
+# Time in seconds before a player is removed from the game
+playerTimeout=20
