Improved thread safety, closes #4

--- a/assign2/src/server/application.properties
+++ b/assign2/src/server/application.properties
@@ -4,8 +4,13 @@ teamSize=1
 # The rate of change for the elo rating
 eloFactor=32
 
-# Queue refresh rate in seconds
-queueRefresh=5
-
 # Time in seconds before a player is removed from the game
 playerTimeout=20
+
+## Queueing
+# Queue refresh rate in seconds
+queueRefresh=5
+# Time relaxation factor
+timeFactor=8
+# Time relaxation baseline
+timeBaseline=100
